# thrifty

./: .gitignore  README.md  hook.sh  install.sh  pyproject.toml
.claude/: settings.local.json
tests/: conftest.py  test_git.py  test_rewrite.py  test_search.py  test_system.py
thrifty/: __main__.py  rewrite.py  utils.py
thrifty.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
thrifty/filters/: git.py  search.py  system.py
