[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thrifty"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
thrifty = "thrifty.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["thrifty*"]
